# smartriz-project

./: .env.example  .gitignore  CLAUDE.md  README.md  init_vector_db.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agents/: graph.py  state.py
data/: 39_parameters.yaml  40_principles.yaml  borderline.jsonl  deduplicated.jsonl  matrix_validated.jsonl  processed_keys.txt  processed_keys.txt.full_backup  rejected_dataset.jsonl  training_dataset.backup_20260506_151022.json  training_dataset.json  training_dataset.json.bak
data/knowledge/: parameters.json  principles.json  seed_dataset.json  seed_dataset_v2.json  triz_matrix.xls
docs/: local-vanilla-setup.md
notebooks/: 00_dataset_analysis.ipynb  01_sft_training.ipynb  02_dpo_training.ipynb  03_convert_and_eval.ipynb  README.md  requirements_colab.txt
notebooks/sandbox/: README.md  dryrun.ipynb
scripts/: build_dpo_pairs.py  check_setup.py  compare_sft_vs_dpo.py  fix_dataset_ids.py  generate_data.py  generate_matrix_from_xls.py  init_vector_db.py  run_api.py  run_graph_test.py
serving/: api.py
src/serving/: api.py
tests/test_data_generation/: test_complexity_validator.py  test_contradiction_validation.py  test_extractor.py  test_judge_borderline.py  test_matrix_citations.py  test_scheduler.py  test_triz_kb.py
ui/: index.html  package-lock.json
ui/src/: App.css  App.jsx
week4_synthetic_data/: README.md  config.py  main.py
week4_synthetic_data/pipeline/: judge.py  orchestrator.py  teacher.py
week4_synthetic_data/prompts/: evol_constraint.py  evol_deepening.py
(+66 files in other folders)
