[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartriz"
version = "0.1.0"
description = "TRIZ problem-solving AI with synthetic data generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML",
    "chromadb",
    "requests",
    "openai",
    "python-dotenv",
    "langgraph",
    "langchain",
    "langchain-openai",
    "streamlit",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "tenacity",
    "sentence-transformers",
    "numpy",
    "xlrd",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
